eck-argocd/es-lb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2021-06-01T15:07:08Z"
  labels:
    common.k8s.elastic.co/type: elasticsearch
    elasticsearch.k8s.elastic.co/cluster-name: quickstart
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:common.k8s.elastic.co/type: {}
          f:elasticsearch.k8s.elastic.co/cluster-name: {}
        f:ownerReferences:
          .: {}
          k:{"uid":"1690866e-bae4-405a-b951-935e15186210"}:
            .: {}
            f:apiVersion: {}
            f:blockOwnerDeletion: {}
            f:controller: {}
            f:kind: {}
            f:name: {}
            f:uid: {}
      f:spec:
        f:ports:
          .: {}
          k:{"port":9200,"protocol":"TCP"}:
            .: {}
            f:name: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:common.k8s.elastic.co/type: {}
          f:elasticsearch.k8s.elastic.co/cluster-name: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: elastic-operator
    operation: Update
    time: "2021-06-01T15:07:08Z"
  name: quickstart-es-http
  namespace: elastic-system
  ownerReferences:
  - apiVersion: elasticsearch.k8s.elastic.co/v1
    blockOwnerDeletion: true
    controller: true
    kind: Elasticsearch
    name: quickstart
    uid: 1690866e-bae4-405a-b951-935e15186210
  resourceVersion: "85851150"
  selfLink: /api/v1/namespaces/elastic-system/services/quickstart-es-http
  uid: e365cfc4-6840-45dc-a7d4-26bce180166d
spec:
  clusterIP: 10.152.183.182
  ports:
  - name: https
    port: 9200
    protocol: TCP
    targetPort: 9200
  selector:
    common.k8s.elastic.co/type: elasticsearch
    elasticsearch.k8s.elastic.co/cluster-name: quickstart
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
