eck-argocd/quickstart-kb-http-new.yaml
apiVersion: v1
kind: Service
metadata:
  name: quickstart-kb-http-new
spec:
  type: LoadBalancer
  selector:
      common.k8s.elastic.co/type: kibana
  ports:
    - port: 9200
      targetPort: 9200
