eck-argocd/ingress-for-kibana.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: eck-devsa
  namespace: elastic-system
   annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: eck.apps-dev.devsa-rnd.frontiir.net
    http:
      paths:
      - path: /
        backend:
          serviceName: quickstart-kb-http
          servicePort: 5601
